# bifrost-exchange

./: .dockerignore  .editorconfig  .gitignore  Bifrost.sln  CLAUDE.md  Directory.Build.props  Directory.Packages.props  LICENSE  README.md  UPSTREAM.md  docker-compose.yml
.github/scripts/: lint-concurrent-dictionary.sh
.github/workflows/: ci-gateway-load.yml  ci.yml  release.yml
bigscreen/: .gitignore  Dockerfile  UPSTREAM.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
bigscreen/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
config/: guards.json  hackathon.json  news-library.json
contracts/: README.md  auction.proto  buf.yaml  events.proto  market.proto  mc.proto  round.proto  strategy.proto
contracts/python/: .gitignore  README.md  build.sh  pyproject.toml
contracts/roundtrip/: .gitignore  harness.py  pyproject.toml
docs/: UPSTREAM.md  gateway-mapping.md  phase-sequencing-note.md
src/contracts/: README.md  UPSTREAM.md
src/contracts-internal/: README.md  UPSTREAM.md
src/dah-auction/: AuctionJsonSerializerContext.cs  Bifrost.DahAuction.csproj  Dockerfile  Program.cs  StartupLogger.cs  appsettings.json
src/exchange/: Bifrost.Exchange.csproj  Dockerfile  Program.cs  StartupLogger.cs  UPSTREAM.md  appsettings.json
src/gateway/: Bifrost.Gateway.csproj  Dockerfile  Program.cs  StartupLogger.cs  appsettings.json
src/imbalance/: Bifrost.Imbalance.csproj  Dockerfile  IRandomSource.cs  Program.cs  (+11 more)
tools/: install-hooks.sh  no-auto-advance-guard.sh  quoter-smoke.py  quoter-smoke.sh  scrub-gsd.sh
(+419 files in other folders)
